Fixed CSS Styles not showing. Ctrl Shft R

--- a/FlaskApp-API/static/styles/styles.css
+++ b/FlaskApp-API/static/styles/styles.css
@@ -2,7 +2,7 @@ body {
     background-color: teal;
 }
 
-/* .locating {
+.locating {
     padding-left:7%;
     padding-right:7%;
     padding-top: 9%;
@@ -22,7 +22,7 @@ body {
 }
 
 h1 {
-    color: Teal;
+    color: white;
     font-weight: bold;
     padding-top: 1.5rem;
     padding-bottom: .5rem;
@@ -38,4 +38,4 @@ h1 {
     background-color: teal;
     color: white;
     font-weight: bold;
-} */
+}
